--- a/zadmin-web/src/main/resources/application.properties
+++ b/zadmin-web/src/main/resources/application.properties
@@ -34,4 +34,7 @@ mybatis-plus.global-config.db-config.table-underline=true
 mybatis-plus.global-config.db-config.db-type=mysql
 mybatis-plus.global-config.db-config.logic-delete-value=1
 mybatis-plus.global-config.db-config.logic-not-delete-value=0
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+
 
