--- a/zadmin-web/src/main/resources/application.properties
+++ b/zadmin-web/src/main/resources/application.properties
@@ -36,5 +36,8 @@ mybatis-plus.global-config.db-config.logic-delete-value=1
 mybatis-plus.global-config.db-config.logic-not-delete-value=0
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+
 
 
