--- a/zadmin-web/src/main/resources/application.properties
+++ b/zadmin-web/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8989
 #druid
-spring.datasource.url=jdbc:mysql://localhost:3306/zadmin?characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/zadmin?characterEncoding=utf-8&serverTimezone=GMT%2B8&
 spring.datasource.username=root
 spring.datasource.password=1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -34,7 +34,7 @@ mybatis-plus.global-config.db-config.table-underline=true
 mybatis-plus.global-config.db-config.db-type=mysql
 mybatis-plus.global-config.db-config.logic-delete-value=1
 mybatis-plus.global-config.db-config.logic-not-delete-value=0
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
